finished base app completed log - CRUD done Added a way to stop people who haven't logged in to access logs

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,8 @@
         margin-right: auto;
         background-color: #b7d0e2;
       }
+      tr:hover {background-color: #D6EEEE;}
+
     </style>
 </head>
 <body>
