--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
     <div class="col text-right m-100">
       <a href="login" class="btn btn-outline-primary btn-lg">Login</a>
       <a href="account" class="btn btn-outline-primary btn-lg">Account</a>
+      <a href="logout" class="btn btn-outline-primary btn-lg">Logout</a>
     </div>
 
 
@@ -51,6 +52,7 @@
     <div class="col text-center m-1">
       <a href="logs" class="btn btn-outline-primary btn-lg">Logs</a>
     </div>
+
   </div>
   <hr />
 </div>
